<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/clap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clap"
        android:textSize="120sp"
        app:layout_constraintBottom_toTopOf="@id/congratulations_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/congratulations_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ticket_confirm"
        android:textAppearance="@style/title"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clap" />

    <TextView
        android:id="@+id/text_view_booking_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/congratulations_title"
        android:layout_marginTop="24dp"
        android:textColor="?attr/colorOnSurface"
        android:textAppearance="@style/font"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginHorizontal="14dp"
        tools:text="Код бронирования: 124124"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="?attr/colorTertiaryContainer"
        android:padding="20dp"
        android:text="@string/back_to_menu"
        android:textAppearance="@style/button"
        android:textColor="?attr/colorOnTertiaryContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>