<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:layout_marginStart="12dp"
    android:layout_marginTop="6dp"
    android:layout_marginEnd="12dp"
    android:layout_marginBottom="6dp"
    app:cardBackgroundColor="?attr/colorSurfaceContainerHigh"
    app:cardCornerRadius="10dp"
    app:contentPadding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@id/departure_airport_code"
        app:layout_constraintTop_toTopOf="@id/departure_airport_code">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/departure_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textAppearance="@style/main_text"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/departure_location_tools" />

        <View
            android:id="@+id/location_arrow"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/arrow_forward"
            android:backgroundTint="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@id/departure_location"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/destination_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textAppearance="@style/main_text"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/location_arrow"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/destination_location_tools" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/calendar_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:background="@drawable/round_frame"
            android:backgroundTint="?attr/colorPrimary"
            android:gravity="center"
            android:padding="4dp"
            android:textAppearance="@style/round_frame"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/departure_time"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/date_in_frame_tools"
            tools:textAllCaps="true" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/departure_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:textAppearance="@style/secondary_text"
            android:textColor="?attr/colorOnSurfaceVariant"
            app:layout_constraintBottom_toTopOf="@id/departure_airport_code"
            app:layout_constraintEnd_toStartOf="@id/time_arrow"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/time_tools" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/departure_airport_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/additional_text"
            android:textColor="?attr/colorOnSurfaceVariant"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/departure_time"
            app:layout_constraintTop_toBottomOf="@id/departure_time"
            tools:text="@string/airport_code_tools"
            tools:textAllCaps="true" />

        <View
            android:id="@+id/time_arrow"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/arrow_forward"
            android:backgroundTint="?attr/colorOnSurfaceVariant"
            app:layout_constraintEnd_toStartOf="@id/destination_time"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="@id/destination_time"
            tools:textAppearance="@style/additional_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/destination_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textAppearance="@style/secondary_text"
            android:textColor="?attr/colorOnSurfaceVariant"
            app:layout_constraintBottom_toTopOf="@id/destination_airport_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/time_tools" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/destination_airport_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/secondary_text"
            android:textColor="?attr/colorOnSurfaceVariant"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/destination_time"
            app:layout_constraintTop_toBottomOf="@id/destination_time"
            tools:text="@string/airport_code_tools"
            tools:textAllCaps="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>